[gd_scene load_steps=8 format=3 uid="uid://d0gfpqb3qxm6y"]

[ext_resource type="Script" uid="uid://csmoxqj62wug0" path="res://components/NChannelMOSFET3D.gd" id="1_mosfet_script"]
[ext_resource type="Script" uid="uid://bhe7bl46uj0jq" path="res://components/TerminalFeedback.gd" id="2_terminal_feedback"]
[ext_resource type="Material" uid="uid://cv6f3hveepm7a" path="res://components/Resistor3D.tres" id="3_terminal_material"]

[sub_resource type="BoxMesh" id="BoxMesh_mosfet_body_mesh"]
size = Vector3(0.3, 0.3, 0.3)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_terminal_shape"]
radius = 0.075
height = 0.7

[sub_resource type="SphereMesh" id="SphereMesh_terminal_visualization"]
radius = 0.05

[sub_resource type="BoxShape3D" id="BoxShape3D_component_body_shape"]
size = Vector3(0.3, 0.3, 0.3)

[node name="NChannelMOSFET3D" type="Node3D"]
script = ExtResource("1_mosfet_script")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_mosfet_body_mesh")

[node name="TerminalD" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0, 0)
collision_layer = 2
script = ExtResource("2_terminal_feedback")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TerminalD"]
shape = SubResource("CapsuleShape3D_terminal_shape")

[node name="Visualization" type="MeshInstance3D" parent="TerminalD"]
material_override = ExtResource("3_terminal_material")
mesh = SubResource("SphereMesh_terminal_visualization")

[node name="Label3D" type="Label3D" parent="TerminalD"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0.6, 0)
visible = false
billboard = 1
text = "Drain"
font_size = 20

[node name="TerminalG" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.2)
collision_layer = 2
script = ExtResource("2_terminal_feedback")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TerminalG"]
shape = SubResource("CapsuleShape3D_terminal_shape")

[node name="Visualization" type="MeshInstance3D" parent="TerminalG"]
material_override = ExtResource("3_terminal_material")
mesh = SubResource("SphereMesh_terminal_visualization")

[node name="Label3D" type="Label3D" parent="TerminalG"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0.6, 0)
visible = false
billboard = 1
text = "Gate"
font_size = 20

[node name="TerminalS" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.2)
collision_layer = 2
script = ExtResource("2_terminal_feedback")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TerminalS"]
shape = SubResource("CapsuleShape3D_terminal_shape")

[node name="Visualization" type="MeshInstance3D" parent="TerminalS"]
material_override = ExtResource("3_terminal_material")
mesh = SubResource("SphereMesh_terminal_visualization")

[node name="Label3D" type="Label3D" parent="TerminalS"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0.6, 0)
visible = false
billboard = 1
text = "Source"
font_size = 20

[node name="ComponentBody" type="Area3D" parent="."]
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="ComponentBody"]
shape = SubResource("BoxShape3D_component_body_shape")

[node name="InfoLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 0.6, 0.3)
visible = false
text = "Region: N/A
Id: N/A
Vgs: N/A V
Vds: N/A V"
font_size = 20
outline_size = 2
